SERVER-16274 synchronize start of bg index builds on secondaries